--- a/install
+++ b/install
@@ -517,10 +517,8 @@ function get_script() {
         echo "Error: Unsupported operating system '$(uname -s)'."
         return 1
     fi
-    echo "Copying $source_file to $destination_file"
     echo "#!/usr/bin/env bash" > "$destination_file"
     cat "$source_file" >> "$destination_file"
-
     chmod +x "$destination_file"
 }
 
@@ -538,7 +536,7 @@ fi
 # from the /app directory into our install directory and make it
 # executable too
 if [ -f "$INSTALL_DIR/app/create_nomi" ]; then
-    get_script "$INSTALL_DIR/create_nomi" "$INSTALL_DIR/"
+    get_script "$INSTALL_DIR/app/create_nomi" "$INSTALL_DIR"
 else
     echo "Error: create_nomi script not found in $INSTALL_DIR/app."
 fi
@@ -551,7 +549,7 @@ echo "The installation completed successfully."
 # for them
 if [ -f "$INSTALL_DIR/create_nomi.sh" ]; then
     # Prompt the user to set up a Nomi
-    prompt_confirm "Do you want to create a Nomi now?"; then
+    if prompt_confirm "Do you want to create a Nomi now?"; then
         echo "Creating a new Nomi..."
         "$INSTALL_DIR/create_nomi.sh"
     else
@@ -563,7 +561,7 @@ fi
 # macOS version
 if [ -f "$INSTALL_DIR/create_nomi.command" ]; then
     # Prompt the user to set up a Nomi
-    prompt_confirm "Do you want to create a Nomi now?"; then
+    if prompt_confirm "Do you want to create a Nomi now?"; then
         echo "Creating a new Nomi..."
         "$INSTALL_DIR/create_nomi.command"
     else
