--- a/install
+++ b/install
@@ -219,7 +219,7 @@ ECHO The installation completed succesfully.
 :: user wants to set up a Nomi run the setup file in this directory
 :: for them
 IF EXIST "%INSTALL_DIR%\create_nomi.bat" (
-    SET /P RUN_SETUP="Do you want to create a Nomi now? [y/N]: "
+    SET /P "RUN_SETUP=Do you want to create a Nomi now? [y/N]: "
     IF /I "%RUN_SETUP%" == "Y" (
         ECHO Creating a new Nomi...
         START "%INSTALL_DIR%\create_nomi.bat"
