Move to Docker for setup

--- a/install
+++ b/install
@@ -206,10 +206,10 @@ IF EXIST "%INSTALL_DIR%\install" (
     REN "%INSTALL_DIR%\install" "install.bat"
 )
 
-:: Check if the Nomi creation script exists (it should). Copy and rename it to
-:: create_nomi.bat to make running it from the command line easier later
-IF EXIST "%INSTALL_DIR%\app\create_nomi" (
-    COPY /Y "%INSTALL_DIR%\app\create_nomi" "%INSTALL_DIR%\create_nomi.bat" >NUL
+:: Check if the Nomi setup script exists (it should). Copy and rename it to
+:: setup.bat to make running it from the command line easier later
+IF EXIST "%INSTALL_DIR%\setup\setup" (
+    COPY /Y "%INSTALL_DIR%\setup\setup" "%INSTALL_DIR%\setup.bat" >NUL
 )
 
 ECHO:
@@ -220,15 +220,14 @@ ECHO:
 :: to the user and ask if they want to set up any Nomis now. If the
 :: user wants to set up a Nomi run the setup file in this directory
 :: for them
-IF EXIST "%INSTALL_DIR%\create_nomi.bat" (
-    SET /P "CREATE_NOMI=Do you want to create a Nomi now? [y/N]: "
-    ECHO "!CREATE_NOMI!"
-    IF /I "!CREATE_NOMI!" == "Y" (
-        ECHO Creating a new Nomi...
-        START /I CMD /Q /K "%INSTALL_DIR%\create_nomi.bat"
+IF EXIST "%INSTALL_DIR%\setup.bat" (
+    SET /P "RUN_SETUP=Do you want to set up a Nomi now? [y/N]: "
+    ECHO "!RUN_SETUP!"
+    IF /I "!RUN_SETUP!" == "Y" (
+        START /I CMD /Q /K "%INSTALL_DIR%\setup.bat"
     ) ELSE (
-        ECHO Creating a new Nomi was skipped. You can run it later
-        ECHO by running create_nomi.bat in the installation directory.
+        ECHO Setting up a new Nomi was skipped. You can run it later
+        ECHO by running the setup script in the installation directory.
     )
 )
 
@@ -535,13 +534,13 @@ else
     echo "Error: install script not found in $INSTALL_DIR."
 fi
 
-# Check if the Nomi creation script exists (it should). Copy it
-# from the /app directory into our install directory and make it
+# Check if the Nomi setup script exists (it should). Copy it
+# from the /setup directory into our install directory and make it
 # executable too
-if [ -f "$INSTALL_DIR/app/create_nomi" ]; then
-    get_script "$INSTALL_DIR/app/create_nomi" "$INSTALL_DIR"
+if [ -f "$INSTALL_DIR/setup/setup" ]; then
+    get_script "$INSTALL_DIR/setup/setup" "$INSTALL_DIR"
 else
-    echo "Error: create_nomi script not found in $INSTALL_DIR/app."
+    echo "Error: setup script not found in $INSTALL_DIR/setup."
 fi
 
 echo
@@ -553,22 +552,22 @@ echo
 # user wants to set up a Nomi run the setup file in this directory
 # for them
 if [ "$(uname -s)" == "Darwin" ]; then
-    CREATE_NOMI_SCRIPT="$INSTALL_DIR/create_nomi.command"
+    SETUP_SCRIPT="$INSTALL_DIR/setup.command"
 elif [ "$(uname -s)" == "Linux" ]; then
-    CREATE_NOMI_SCRIPT="$INSTALL_DIR/create_nomi.sh"
+    SETUP_SCRIPT="$INSTALL_DIR/setup.sh"
 else
     echo "Error: Unsupported operating system '$(uname -s)'."
     return 1
 fi
 
-if [ -f "$CREATE_NOMI_SCRIPT" ]; then
+if [ -f "$SETUP_SCRIPT" ]; then
     # Prompt the user to set up a Nomi
-    if prompt_confirm "Do you want to create a Nomi now?"; then
+    if prompt_confirm "Do you want to set up up a Nomi now?"; then
         echo
-        "$CREATE_NOMI_SCRIPT"
+        bash "$SETUP_SCRIPT"
     else
-        echo "Creating a new Nomi was skipped. You can run it later"
-        echo "by executing 'create_nomi.sh' in the installation directory."
+        echo "Setting up a new Nomi was skipped. You can run it later"
+        echo "by running the setup script in the installation directory."
     fi
 fi
 
